.provarCaches/00D5f000005vwGkEAI/objects/rstkf__customextf2__c.object
<CustomObject>
    <description>customextf2</description>
    <fields>
        <fullName>rstkf__baankexchange_rate_schedule__c</fullName>
        <inlineHelpText>Type of Exchange Rate Schedule</inlineHelpText>
        <label>Type of Exchange Rate Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked-In Commitment Rate</fullName>
                </value>
                <value>
                    <fullName>Override Rate</fullName>
                </value>
                <value>
                    <fullName>a9g1Q0000004M1HQAU</fullName>
                    <isActive>false</isActive>
                    <label>a9g1Q0000004M1HQAU</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsummary_summarize_gltzn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>gltxnsummary_summarize_gltzn__c</description>
        <label>Summarize Statement &amp; Adjusting Txns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__noncashtransfer_doautomatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>noncashtransfer_doautomatch__c</description>
        <inlineHelpText>This field gives the user control over whether or not the Automatic Match process is invoked by the page immediately after completing the search.</inlineHelpText>
        <label>Do Automatic Match After Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_bankoverriderate__c</fullName>
        <inlineHelpText>Override Rate for this Session</inlineHelpText>
        <label>Override Rate for this Session</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_bankschedulerate__c</fullName>
        <inlineHelpText>Override Rate</inlineHelpText>
        <label>Override Rate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_currbankexchangerate__c</fullName>
        <description>Current Exchange Rate</description>
        <inlineHelpText>Current Exchange Rate</inlineHelpText>
        <label>Current Exchange Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_currbankoverrideschedule__c</fullName>
        <description>Current Override Schedule</description>
        <inlineHelpText>Current Override Schedule</inlineHelpText>
        <label>Current Override Schedule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysession_homercurrency__c</fullName>
        <description>Homer Currency</description>
        <inlineHelpText>Homer Currency</inlineHelpText>
        <label>Homer Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>customextf2</label>
    <nameField>
        <label>name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>customextf2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>